# LocalTTS

./: .gitignore  README.md  createAudio.py  pyproject.toml  streamAudio.py  streamFastAPI.py  wikipediaParser.py  wikipediaReader.py
