[project]
name = "kokoro"
version = "0.1.0"
description = "An exploration of TTS functionality using the Kokoro voice engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "kokoro-onnx>=0.4.5",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "nvidia-cudnn-cu12>=9.8.0.87",
    "onnxruntime-gpu>=1.21.0",
    "openai>=1.65.5",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]
